--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
+{% load staticfiles %}
 <head>
     <meta charset="UTF-8">
     <title>{{Title}}</title>
-    <link rel="stylesheet" style="text/css" href="{static 'css/base.css'}">
+    <link rel="stylesheet" type="text/css"  href="{% static 'css/index.css' %}">
 </head>
 <header></header>
 <body>
