--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ja">
-{% load staticfiles %}
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <title>{{Title}}</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" >
     <link rel="stylesheet" type="text/css"  href="{% static 'css/index.css' %}">
+    <script type="text/javasprict" src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 </head>
 <header></header>
 <body>
