--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
             
             <table class="Forms">
                 <thead><th>現在のシフト</th><th>出勤状況</th></thead>
+                {# この以下の表示を工夫して、jQuery で Ajax させる。 #}
                 {% for data in model %}
                 <tbody>
                     <tr>
