'仕組みは完成！'

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -51,7 +51,7 @@ h1{
 
 table.Forms{
     border-style: groove;
-    margin: 0 3%;
+    margin: auto;
     margin-bottom: 10%;
     padding: 1%;
     width: 50%;
