--- a/static/css/index.css
+++ b/static/css/index.css
@@ -51,7 +51,7 @@ h1{
 
 table.Forms{
     border-style: groove;
-    margin: auto;
+    margin: 0 2%;
     margin-bottom: 10%;
     padding: 1%;
     width: 50%;
