--- a/templates/index.html
+++ b/templates/index.html
@@ -17,18 +17,22 @@
                     <tr><td></td><td><button>決定</button></td></tr>
                 </form>
             </table>
-        <table>
+        <table class="Forms">
+            <thead>
             <tr><th>今日のシフト</th><th>出勤状況</th></tr>
+            </thead>
+            <tbody>
             {% for data in model %}
                 <tr>
                     <th>{{data.name}}</th>
                     {% if data.arrival|divisibleby:"2" %}
-                    <th>不在</th>
+                    <th style="color:red">不在</th>
                     {% else %}
-                    <th>出勤</th>
+                    <th style="color:green">勤務中</th>
                     {% endif %}
                 </tr>
             {% endfor %}
+            </tbody>
         </table>
     </div>
 </div>
